<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppConsultasSQL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="consulta">Consulta SQL</string>
    <string name="catalogo">Catalogo</string>
    <string name="checkbox">SQL de modificación</string>
    <string name="enviar">Enviar</string>
    <string name="textrequest">Request</string>
    <string name="sugerencia">Utiliza LIMIT en las consultas SQL de selección, 
si devuelven muchos registros podrían provocar que la
aplicación se ralentice en exceso o incluso deje de funcionar. 
Por ejemplo: nselect * from factura limit 0,10 n(mostrará los 10 
primeros registros)</string>
    <string name="title_activity_configurator">ConfiguratorActivity</string>
    <string name="ipnom">IP/Nombre de red del Servidor</string>
    <string name="puerto">Puerto</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="conectar">Conectar</string>
    <string name="title_activity_page_consult">PageConsult</string>

</resources>
