<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/ListCatalogo"
            android:layout_width="208dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ObListCatalogo"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:text="@string/catalogo" />
    </LinearLayout>

    <EditText
        android:id="@+id/ConsulSQL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/consulta" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/opConsultaModificacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:text="@string/checkbox" />

        <Button
            android:id="@+id/Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar" />
    </LinearLayout>

    <view
        android:id="@+id/lineaHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000080" >
    </view>

    <TextView
        android:id="@+id/request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/textrequest" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugerencia" />

</LinearLayout>